feat: add section spend time

--- a/src/index.html
+++ b/src/index.html
@@ -85,8 +85,8 @@
                         <div class="section__header">
                             <span class="section__header-title-bg">Размещение</span>
                             <h2 class="section__title">Размещение
+                            </h2>
                         </div>
-                        </h2>
                         <p class="section__text">
                             Для размещения гостей предусмотрены 5 домиков и 3 сферы с купелями на подиумах. Номера не
                             только оснащены удобной мебелью, современной техникой и всем необходимым для комфортного
@@ -294,6 +294,84 @@
                 </div>
             </div>
         </section> <!-- end of section placement-->
+
+        <!-- section spend time -->
+        <section class="section section--st">
+            <div class="container">
+                <div class="section__inner">
+                    <div class="section__header">
+                        <span class="section__header-title-bg">Как провести время?</span>
+                        <h2 class="section__title">Как провести время?</h2>
+                    </div>
+
+                    <div class="section__content">
+                        <div class="card card--st">
+                            <picture>
+                                <source srcset="img/section/spend-time/1.webp">
+                                <img src="img/section/spend-time/1.jpg" alt="">
+                            </picture>
+
+                            <div class="card__text-block">
+                                <p class="card__title">Банный комплекс «Жара»</p>
+                                <p class="card__text">В отеле вас ждет еще одно настоящее место силы – настоящая русская
+                                    баня!</p>
+                            </div>
+                        </div>
+                        <div class="card card--st">
+                            <picture>
+                                <source srcset="img/section/spend-time/2.webp">
+                                <img src="img/section/spend-time/2.jpg" alt="">
+                            </picture>
+
+                            <div class="card__text-block">
+                                <p class="card__title">Чанная и Чайная</p>
+
+                            </div>
+                        </div>
+                        <div class="card card--st">
+                            <picture>
+                                <source srcset="img/section/spend-time/3.webp">
+                                <img src="img/section/spend-time/3.jpg" alt="">
+                            </picture>
+
+                            <div class="card__text-block">
+                                <p class="card__title">Спа-комплекс и бассейн</p>
+                            </div>
+                        </div>
+                        <div class="card card--st">
+                            <picture>
+                                <source srcset="img/section/spend-time/4.webp">
+                                <img src="img/section/spend-time/4.jpg" alt="">
+                            </picture>
+
+                            <div class="card__text-block">
+                                <p class="card__title">Активный отдых</p>
+                            </div>
+                        </div>
+                        <div class="card card--st">
+                            <picture>
+                                <source srcset="img/section/spend-time/5.webp">
+                                <img src="img/section/spend-time/5.jpg" alt="">
+                            </picture>
+
+                            <div class="card__text-block">
+                                <p class="card__title">Водные развлечения</p>
+                            </div>
+                        </div>
+                        <div class="card card--st">
+                            <picture>
+                                <source srcset="img/section/spend-time/6.webp">
+                                <img src="img/section/spend-time/6.jpg" alt="">
+                            </picture>
+
+                            <div class="card__text-block">
+                                <p class="card__title">Scandi зимой</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <!-- footer include -->
