feat: add section restaurant

--- a/src/index.html
+++ b/src/index.html
@@ -371,6 +371,26 @@
                     </div>
                 </div>
             </div>
+        </section> <!-- end of section spend time-->
+
+        <!-- section restaurant -->
+        <section class="section section--restaurant">
+            <div class="container--lg">
+                <div class="section__inner">
+                    <div class="container">
+                        <div class="section__header">
+                            <span class="section__header-title-bg">Ресторан</span>
+                            <h2 class="section__title">Ресторан «Amore»</h2>
+                        </div>
+                    </div>
+                    <div class="section__content">
+                        <picture>
+                            <source srcset="img/section/restaurant/image.webp">
+                            <img src="img/section/restaurant/image.jpg" alt="накрытый стол">
+                        </picture>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
