--- a/src/index.html
+++ b/src/index.html
@@ -391,7 +391,68 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> <!-- end of section restaurant-->
+
+        <!-- section events -->
+        <div class="section section--events">
+            <div class="container--lg">
+                <div class="section__inner">
+                    <div class="section__header">
+                        <span class="section__header-title-bg">Мероприятия</span>
+                        <h2 class="section__title">Мероприятия в «ScandiEvent»</h2>
+                        <p class="section__text">
+                            Загородный Комплекс «Scandi» - это уникальная площадка
+                            для проведения любых мероприятий!
+                            Свадьбы, Дни рождения, корпоративы, ретриты и многое другое!
+                        </p>
+                    </div>
+                    <div class="section__content">
+                        <div class="section__text-block">
+                            <h3 class="section__event-title">
+                                Проведение банкетов
+                            </h3>
+
+                            <p class="section__text">Scandi - загородный комплекс в Тульской области, где о будничной
+                                суматохе точно придется забыть. Оборудованная территория, свежий воздух и завораживающие
+                                закаты ждут гостей на берегу водохранилища. Здесь можно отдохнуть в выходные, провести
+                                отпуск или устроить мероприятие с размахом, которое точно запомнится всем приглашенным.
+                            </p>
+
+                            <button type="button" class="btn btn--orange section__btn">
+                                Подробнее
+                            </button>
+                        </div>
+                        <div class="swiper swiper--5">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/section/events/1.webp">
+                                        <img src="img/section/events/1.jpg" alt="">
+                                    </picture>
+                                </div>
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/section/events/1.webp">
+                                        <img src="img/section/events/1.jpg" alt="">
+                                    </picture>
+                                </div>
+
+                            </div>
+
+                            <!-- If we need navigation buttons -->
+                            <div class="swiper-button-prev swiper-button-prev--5">
+                                <img src="img/icons/chevron-back.svg" alt="">
+                            </div>
+                            <div class="swiper-button-next swiper-button-next--5">
+                                <img src="img/icons/chevron-back.svg" alt="">
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
     <!-- footer include -->
