feat: add section faq

--- a/src/index.html
+++ b/src/index.html
@@ -394,7 +394,7 @@
         </section> <!-- end of section restaurant-->
 
         <!-- section events -->
-        <div class="section section--events">
+        <section class="section section--events">
             <div class="container--lg">
                 <div class="section__inner">
                     <div class="section__header">
@@ -446,13 +446,77 @@
                             <div class="swiper-button-next swiper-button-next--5">
                                 <img src="img/icons/chevron-back.svg" alt="">
                             </div>
-
                         </div>
-
                     </div>
                 </div>
             </div>
-        </div>
+        </section> <!-- end of section events-->
+
+        <!-- section faq -->
+        <section class="section section--faq">
+            <div class="container">
+                <div class="section__inner">
+                    <div class="section__header">
+                        <span class="section__header-title-bg">ВОПРОСЫ</span>
+                        <h2 class="section__title">ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ</h2>
+                    </div>
+                    <div class="section__content">
+                        <div class="faq__panel">
+                            <div class="faq__panel-top">
+                                <p class="faq__panel-question">Какие варианты размещения?</p>
+
+                                <img src="img/icons/minus.jpg" alt="">
+                            </div>
+
+                            <div class="faq__dropdown">
+                                <p class="faq__dropdown-text"><b>Ответ:</b> В отеле действует динамическая система
+                                    ценообразования и цены могут варьироваться от 6000 до 30000 рублей/сутки, в
+                                    зависимости от категории дома и количества проживающих гостей.</p>
+                            </div>
+                        </div>
+                        <div class="faq__panel">
+                            <div class="faq__panel-top">
+                                <p class="faq__panel-question">Какова площадь и планировка домиков?</p>
+
+                                <img src="img/icons/plus.jpg" alt="">
+                            </div>
+
+                            <div class="faq__dropdown">
+                                <p class="faq__dropdown-text"><b>Ответ:</b> В отеле действует динамическая система
+                                    ценообразования и цены могут варьироваться от 6000 до 30000 рублей/сутки, в
+                                    зависимости от категории дома и количества проживающих гостей.</p>
+                            </div>
+                        </div>
+                        <div class="faq__panel">
+                            <div class="faq__panel-top">
+                                <p class="faq__panel-question">Какая категория у отеля?</p>
+
+                                <img src="img/icons/plus.jpg" alt="">
+                            </div>
+
+                            <div class="faq__dropdown">
+                                <p class="faq__dropdown-text"><b>Ответ:</b> В отеле действует динамическая система
+                                    ценообразования и цены могут варьироваться от 6000 до 30000 рублей/сутки, в
+                                    зависимости от категории дома и количества проживающих гостей.</p>
+                            </div>
+                        </div>
+                        <div class="faq__panel">
+                            <div class="faq__panel-top">
+                                <p class="faq__panel-question">Какова стоимость проживания?</p>
+
+                                <img src="img/icons/plus.jpg" alt="">
+                            </div>
+
+                            <div class="faq__dropdown">
+                                <p class="faq__dropdown-text"><b>Ответ:</b> В отеле действует динамическая система
+                                    ценообразования и цены могут варьироваться от 6000 до 30000 рублей/сутки, в
+                                    зависимости от категории дома и количества проживающих гостей.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <!-- footer include -->
