--- a/src/index.html
+++ b/src/index.html
@@ -516,6 +516,21 @@
                     </div>
                 </div>
             </div>
+        </section> <!-- end of section faq-->
+
+        <section class="section section--map">
+            <div class="container">
+                <div class="section__inner">
+                    <div class="section__header">
+                        <span class="section__header-title-bg">Контакты</span>
+                        <h2 class="section__title">Где мы находимся</h2>
+                    </div>
+                    <div class="section__content">
+                        <script type="text/javascript" charset="utf-8" async
+                            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A6003d84d678f24d11eeac9f2c51363b7df46740a80d8da7b105d279d395eca1e&amp;width=100%25&amp;height=548&amp;lang=ru_RU&amp;scroll=true"></script>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
