--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
 
         <!-- section about us -->
         <section class="section section--about">
-            <div class="container--lg">
+            <div class="container container--lg">
                 <div class="section__inner">
                     <picture>
                         <source srcset="img/section/about/image.webp">
@@ -149,10 +149,10 @@
 
 
                                 <!-- If we need navigation buttons -->
-                                <div class="swiper-button-prev swiper-button-prev--2">
+                                <div class="swiper-button-prev swiper-button-prev--1">
                                     <img src="img/icons/chevron-back.svg" alt="">
                                 </div>
-                                <div class="swiper-button-next swiper-button-next--2">
+                                <div class="swiper-button-next swiper-button-next--1">
                                     <img src="img/icons/chevron-back.svg" alt="">
                                 </div>
 
@@ -375,7 +375,7 @@
 
         <!-- section restaurant -->
         <section class="section section--restaurant">
-            <div class="container--lg">
+            <div class="container container--lg">
                 <div class="section__inner">
                     <div class="container">
                         <div class="section__header">
@@ -395,7 +395,7 @@
 
         <!-- section events -->
         <section class="section section--events">
-            <div class="container--lg">
+            <div class="container container--lg">
                 <div class="section__inner">
                     <div class="section__header">
                         <span class="section__header-title-bg">Мероприятия</span>
@@ -461,11 +461,11 @@
                         <h2 class="section__title">ЧАСТО ЗАДАВАЕМЫЕ ВОПРОСЫ</h2>
                     </div>
                     <div class="section__content">
-                        <div class="faq__panel">
+                        <div class="faq__panel active">
                             <div class="faq__panel-top">
                                 <p class="faq__panel-question">Какие варианты размещения?</p>
 
-                                <img src="img/icons/minus.jpg" alt="">
+                                <img src="img/icons/minus.jpg" class="faq__panel-icon" alt="">
                             </div>
 
                             <div class="faq__dropdown">
@@ -478,7 +478,7 @@
                             <div class="faq__panel-top">
                                 <p class="faq__panel-question">Какова площадь и планировка домиков?</p>
 
-                                <img src="img/icons/plus.jpg" alt="">
+                                <img src="img/icons/plus.jpg" class="faq__panel-icon" alt="">
                             </div>
 
                             <div class="faq__dropdown">
@@ -491,7 +491,7 @@
                             <div class="faq__panel-top">
                                 <p class="faq__panel-question">Какая категория у отеля?</p>
 
-                                <img src="img/icons/plus.jpg" alt="">
+                                <img src="img/icons/plus.jpg" class="faq__panel-icon" alt="">
                             </div>
 
                             <div class="faq__dropdown">
@@ -504,7 +504,7 @@
                             <div class="faq__panel-top">
                                 <p class="faq__panel-question">Какова стоимость проживания?</p>
 
-                                <img src="img/icons/plus.jpg" alt="">
+                                <img src="img/icons/plus.jpg" class="faq__panel-icon" alt="">
                             </div>
 
                             <div class="faq__dropdown">
