fix: swipers, container, cards

--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,7 @@
                             </picture>
 
                             <div class="card__text-block">
-                                <p class="card__title">Банный комплекс «Жара»</p>
+                                <a href='#' class="card__title">Банный комплекс «Жара»</a>
                                 <p class="card__text">В отеле вас ждет еще одно настоящее место силы – настоящая русская
                                     баня!</p>
                             </div>
@@ -324,7 +324,7 @@
                             </picture>
 
                             <div class="card__text-block">
-                                <p class="card__title">Чанная и Чайная</p>
+                                <a href="#" class="card__title">Чанная и Чайная</a>
 
                             </div>
                         </div>
@@ -335,7 +335,7 @@
                             </picture>
 
                             <div class="card__text-block">
-                                <p class="card__title">Спа-комплекс и бассейн</p>
+                                <a href="#" class="card__title">Спа-комплекс и бассейн</a>
                             </div>
                         </div>
                         <div class="card card--st">
@@ -345,7 +345,7 @@
                             </picture>
 
                             <div class="card__text-block">
-                                <p class="card__title">Активный отдых</p>
+                                <a href="#" class="card__title">Активный отдых</a>
                             </div>
                         </div>
                         <div class="card card--st">
@@ -355,7 +355,7 @@
                             </picture>
 
                             <div class="card__text-block">
-                                <p class="card__title">Водные развлечения</p>
+                                <a href='#' class="card__title">Водные развлечения</a>
                             </div>
                         </div>
                         <div class="card card--st">
@@ -365,7 +365,7 @@
                             </picture>
 
                             <div class="card__text-block">
-                                <p class="card__title">Scandi зимой</p>
+                                <a href="#" class="card__title">Scandi зимой</a>
                             </div>
                         </div>
                     </div>
@@ -384,10 +384,25 @@
                         </div>
                     </div>
                     <div class="section__content">
-                        <picture>
-                            <source srcset="img/section/restaurant/image.webp">
-                            <img src="img/section/restaurant/image.jpg" alt="накрытый стол">
-                        </picture>
+
+                        <div class="swiper swiper--4">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <picture>
+                                        <source srcset="img/section/restaurant/image.webp">
+                                        <img src="img/section/restaurant/image.jpg" alt="накрытый стол">
+                                    </picture>
+                                </div>
+                            </div>
+
+                            <!-- If we need navigation buttons -->
+                            <div class="swiper-button-prev swiper-button-prev--4">
+                                <img src="img/icons/chevron-back.svg" alt="">
+                            </div>
+                            <div class="swiper-button-next swiper-button-next--4">
+                                <img src="img/icons/chevron-back.svg" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
