feat: showcase zoom animation

--- a/src/index.html
+++ b/src/index.html
@@ -62,8 +62,8 @@
                         <div class="section__header">
                             <span class="section__header-title-bg">О нас</span>
                             <h2 class="section__title">О нашем комплексе <b>«ScandiEvent»</b>
+                            </h2>
                         </div>
-                        </h2>
                         <p class="section__text">
                             Scandi - загородный комплекс в Тульской области, где о будничной суматохе точно придется
                             забыть. Оборудованная территория, свежий воздух и завораживающие закаты ждут гостей на
@@ -416,8 +416,9 @@
                         <span class="section__header-title-bg">Мероприятия</span>
                         <h2 class="section__title">Мероприятия в «ScandiEvent»</h2>
                         <p class="section__text">
-                            Загородный Комплекс «Scandi» - это уникальная площадка
-                            для проведения любых мероприятий!
+                            Загородный Комплекс «Scandi» - это уникальная площадка <br> для проведения любых
+                            мероприятий!
+                            <br>
                             Свадьбы, Дни рождения, корпоративы, ретриты и многое другое!
                         </p>
                     </div>
