fix: section title opacity, add swiper to section events

--- a/src/index.html
+++ b/src/index.html
@@ -423,30 +423,28 @@
                         </p>
                     </div>
                     <div class="section__content">
-                        <div class="section__text-block">
-                            <h3 class="section__event-title">
-                                Проведение банкетов
-                            </h3>
-
-                            <p class="section__text">Scandi - загородный комплекс в Тульской области, где о будничной
-                                суматохе точно придется забыть. Оборудованная территория, свежий воздух и завораживающие
-                                закаты ждут гостей на берегу водохранилища. Здесь можно отдохнуть в выходные, провести
-                                отпуск или устроить мероприятие с размахом, которое точно запомнится всем приглашенным.
-                            </p>
-
-                            <button type="button" class="btn btn--orange section__btn">
-                                Подробнее
-                            </button>
-                        </div>
                         <div class="swiper swiper--5">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <picture>
-                                        <source srcset="img/section/events/1.webp">
-                                        <img src="img/section/events/1.jpg" alt="">
-                                    </picture>
-                                </div>
-                                <div class="swiper-slide">
+                                    <div class="section__text-block">
+                                        <h3 class="section__event-title">
+                                            Проведение банкетов
+                                        </h3>
+
+                                        <p class="section__text">Scandi - загородный комплекс в Тульской области, где о
+                                            будничной
+                                            суматохе точно придется забыть. Оборудованная территория, свежий воздух и
+                                            завораживающие
+                                            закаты ждут гостей на берегу водохранилища. Здесь можно отдохнуть в
+                                            выходные, провести
+                                            отпуск или устроить мероприятие с размахом, которое точно запомнится всем
+                                            приглашенным.
+                                        </p>
+
+                                        <button type="button" class="btn btn--orange section__btn">
+                                            Подробнее
+                                        </button>
+                                    </div>
                                     <picture>
                                         <source srcset="img/section/events/1.webp">
                                         <img src="img/section/events/1.jpg" alt="">
