--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,9 @@
                                 </div>
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
+
+
+                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
                             </div>
 
                             <div class="swiper swiper--1">
@@ -222,6 +225,8 @@
                                 </div>
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
+
+                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
                             </div>
                         </article>
                         <article class="card card--house">
@@ -258,6 +263,8 @@
                                 </div>
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
+
+                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
                             </div>
 
                             <div class="swiper swiper--3">
