--- a/src/contacts.html
+++ b/src/contacts.html
@@ -13,42 +13,19 @@
     <!-- main -->
     <main>
         <!-- showcase -->
-        <div class="showcase showcase--about">
-            <div class="container">
-                <div class="showcase__inner">
-                    <h1 class="showcase__title">
-                        Загородный комплекс <br>
-                        <b>«ScandiEvent»</b>
-                    </h1>
-                    <p class="showcase__subtitle">КОНТАКТЫ</p>
-
-                    <form action="/" class="form">
-                        <p class="form__title">Бронирование
-                            номеров</p>
-
-
-                        <div class="form__group">
-                            <label for="input-check-in" class="form__label">Заезд</label>
-                            <input id="input-check-in" type="date" class="form__input">
-
-                        </div>
-
-                        <div class="form__group">
-                            <label for="input-check-out" class="form__label">Выезд</label>
-                            <input id="input-check-out" type="date" class="form__input">
-                        </div>
-
-
-                        <div class="form__group">
-                            <label for="input-guests" class="form__label">Гости</label>
-                            <input id="input-guests" type="text" class="form__input" value="2 взрослых, без детей">
-                        </div>
-
-                        <button type="submit" class="btn btn--light-blue form__btn">Показать</button>
-                    </form>
+        <div class="container container--lg">
+            <div class="showcase showcase--contacts">
+                <div class="container">
+                    <div class="showcase__inner">
+                        <h1 class="showcase__title">
+                            Загородный комплекс <br>
+                            <b>«ScandiEvent»</b>
+                        </h1>
+                        <p class="showcase__subtitle">КОНТАКТЫ</p>
+                    </div>
                 </div>
-            </div>
-        </div> <!-- end of showcase-->
+            </div> <!-- end of showcase-->
+        </div>
 
         <!-- section contacts -->
         <section class="section section--contacts">
