fix: replace btn into link

--- a/src/index.html
+++ b/src/index.html
@@ -129,7 +129,7 @@
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="a-frame-mini.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
 
                             <div class="swiper swiper--1">
@@ -193,7 +193,7 @@
                             <div class="card__text-block">
                                 <div class="card__header">
                                     <span class="card__header-title-bg">02</span>
-                                    <h3 class="card__title">А-Фрейм Опти
+                                    <h3 class="card__title">Опти
 
                                     </h3>
                                 </div>
@@ -226,14 +226,14 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="opti.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house">
                             <div class="card__text-block">
                                 <div class="card__header">
                                     <span class="card__header-title-bg">03</span>
-                                    <h3 class="card__title">А-Фрейм Квадро Light
+                                    <h3 class="card__title">Квадро Light
                                     </h3>
                                 </div>
 
@@ -264,7 +264,7 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="quadro-light.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
 
                             <div class="swiper swiper--3">
@@ -296,7 +296,7 @@
                             </div>
                         </article>
 
-                        <button type="button" class="btn btn--orange section__btn">Посмотреть еще</button>
+                        <a href="houses.html" class="btn btn--orange section__btn">Посмотреть еще</a>
                     </div>
                 </div>
             </div>
