--- a/src/houses.html
+++ b/src/houses.html
@@ -106,7 +106,7 @@
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="a-frame-mini.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house-about">
@@ -117,7 +117,7 @@
                             <div class="card__text-block">
                                 <div class="card__header">
                                     <span class="card__header-title-bg">02</span>
-                                    <h3 class="card__title">А-Фрейм Опти
+                                    <h3 class="card__title">Опти
 
                                     </h3>
                                 </div>
@@ -150,7 +150,7 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="opti.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house-about">
@@ -161,49 +161,6 @@
                             <div class="card__text-block">
                                 <div class="card__header">
                                     <span class="card__header-title-bg">03</span>
-                                    <h3 class="card__title">А-Фрейм Квадро Light
-                                    </h3>
-                                </div>
-
-                                <div class="card__row">
-                                    <span class="card__row-caption">в будни при базовом размещении 2 взр+реб. <br>
-                                        Без использования доп.спального места. </span>
-
-                                    <span class="card__row-value"> <b>7000</b> руб./сутки</span>
-                                </div>
-                                <div class="card__row card__row--additional">
-                                    <span class="card__row-caption">Доп.спальное место (раскладной диван)</span>
-                                    <span class="card__row-value"><b>1000</b> руб.</span>
-                                </div>
-
-                                <div class="card__row">
-                                    <span class="card__row-caption">в выходные и праздничные дни при базовом размещении
-                                        2 взр+реб.
-                                        Без использования доп.спального места.
-                                    </span>
-
-                                    <span class="card__row-value"><b>9000</b> руб./сутки</span>
-                                </div>
-
-                                <div class="card__row card__row--additional">
-                                    <span class="card__row-caption">Доп.спальное место (раскладной диван)</span>
-                                    <span class="card__row-value"><b>1000</b> руб</span>
-                                </div>
-
-                                <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
-
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
-                            </div>
-                        </article>
-
-                        <article class="card card--house-about">
-                            <picture>
-                                <source srcset="img/about/houses/quadro-dark.webp">
-                                <img src="img/about/houses/quadro-dark.jpg" class="card__image" alt="">
-                            </picture>
-                            <div class="card__text-block">
-                                <div class="card__header">
-                                    <span class="card__header-title-bg">04</span>
                                     <h3 class="card__title">Квадро Light
                                     </h3>
                                 </div>
@@ -235,7 +192,50 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="quadro-light.html" class="btn btn--orange card__btn">Подробнее</a>
+                            </div>
+                        </article>
+
+                        <article class="card card--house-about">
+                            <picture>
+                                <source srcset="img/about/houses/quadro-dark.webp">
+                                <img src="img/about/houses/quadro-dark.jpg" class="card__image" alt="">
+                            </picture>
+                            <div class="card__text-block">
+                                <div class="card__header">
+                                    <span class="card__header-title-bg">04</span>
+                                    <h3 class="card__title">Квадро Dark
+                                    </h3>
+                                </div>
+
+                                <div class="card__row">
+                                    <span class="card__row-caption">в будни при базовом размещении 2 взр+реб. <br>
+                                        Без использования доп.спального места. </span>
+
+                                    <span class="card__row-value"> <b>7000</b> руб./сутки</span>
+                                </div>
+                                <div class="card__row card__row--additional">
+                                    <span class="card__row-caption">Доп.спальное место (раскладной диван)</span>
+                                    <span class="card__row-value"><b>1000</b> руб.</span>
+                                </div>
+
+                                <div class="card__row">
+                                    <span class="card__row-caption">в выходные и праздничные дни при базовом размещении
+                                        2 взр+реб.
+                                        Без использования доп.спального места.
+                                    </span>
+
+                                    <span class="card__row-value"><b>9000</b> руб./сутки</span>
+                                </div>
+
+                                <div class="card__row card__row--additional">
+                                    <span class="card__row-caption">Доп.спальное место (раскладной диван)</span>
+                                    <span class="card__row-value"><b>1000</b> руб</span>
+                                </div>
+
+                                <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
+
+                                <a href="quardo-dark.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house-about">
@@ -277,7 +277,7 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="family.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house-about">
@@ -321,7 +321,7 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="sphere1.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house-about">
@@ -365,7 +365,7 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="sphere2.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                         <article class="card card--house-about">
@@ -409,7 +409,7 @@
 
                                 <p class="card__max-placement">*Максимальное размещение – 4 взрослых</p>
 
-                                <button type="button" class="btn btn--orange card__btn">Подробнее</button>
+                                <a href="sphere3.html" class="btn btn--orange card__btn">Подробнее</a>
                             </div>
                         </article>
                     </div>
