feat: add opti page

--- a/src/a-frame-mini.html
+++ b/src/a-frame-mini.html
@@ -3,7 +3,7 @@
 
 <!-- head include -->
 @@include('html/partials/head.html', {
-"title": "Дома"
+"title": "А-Фрейм Мини"
 })
 
 <body>
@@ -99,7 +99,7 @@
                                     <span class="card__row-caption">в будни при базовом размещении 2 взр+реб.
                                         Без использования доп.спального места. </span>
 
-                                    <span class="card__row-value"> <b>7000</b> руб./сутки</span>
+                                    <span class="card__row-value"> <b>6000</b> руб./сутки</span>
                                 </div>
                                 <div class="card__row card__row--additional">
                                     <span class="card__row-caption">Доп.спальное место (раскладной диван)</span>
